--- a/Login page/login_page.html
+++ b/Login page/login_page.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>E-commerce website</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="login.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+		integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title>e-coomerce website</title>
 </head>
-
 <body>
-    <div class="container">
-        <div class="screen">
-            <div class="screen__content">
-                <div class="log1">Login</div>
-                <form class="login">
-                    <div class="login__field">
-                        <i class="login__icon fas fa-user"></i>
-                        <input type="text" class="login__input" placeholder="User name / Email">
-                    </div>
-                    <div class="login__field">
-                        <i class="login__icon fas fa-lock"></i>
-                        <input type="password" class="login__input" placeholder="Password">
-                        <div class="forg"><a href="#">forgot Password ?</div>
+	<div class="wel">WELCOME TO OUR E-COMMERCE WEBSITE...</div>
+	<h2 class="gone">Give Your Workout<br>
+A New style.!</h2>
+<p class="success">Success is not always about greatness.<br> it is about consistency.Consistence
+hard work gains success. Greatness will come....</p>
+
+
+<div class="btn"><a href="#">Explore Now</a></div>
+
+
+	<div class="container">
+	<div class="screen">
+		<div class="screen__content">
+			<div class="log1">Login</div>
+			<form class="login">
+				<div class="login__field">
+					<i class="login__icon fas fa-user"></i>
+					<input type="text" class="login__input" placeholder="User name / Email">
+				</div>
+				<div class="login__field">
+					<i class="login__icon fas fa-lock"></i>
+					<input type="password" class="login__input" placeholder="Password">
+					<div class="forg"><a href="file:///C:/Users/USER/Documents/project/forgate.html#">forgote Password ?</div>
 				</div>
 				<button class="button login__submit">
 					<span class="button__text">Log In Now</span>
@@ -32,23 +41,22 @@
 				</button>				
 			</form>
 			<div class="social-login">
-				<h3><a href="#"> Sign Up</a></h3>
-                            <div class="social-icons">
-                                <!-- <a href="#" class="social-login__icon fab fa-instagram"></a>
+				<h3><a href="file:///C:/Users/USER/Documents/project/signup_page.html?#"> Sign Up</a></h3>
+				<div class="social-icons">
+					<a href="#" class="social-login__icon fab fa-instagram"></a>
 					<a href="#" class="social-login__icon fab fa-facebook"></a>
-					<a href="#" class="social-login__icon fab fa-twitter"></a> -->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="screen__background">
-                        <span class="screen__background__shape screen__background__shape4"></span>
-                        <span class="screen__background__shape screen__background__shape3"></span>
-                        <span class="screen__background__shape screen__background__shape2"></span>
-                        <span class="screen__background__shape screen__background__shape1"></span>
-                    </div>
-            </div>
-        </div>
+					<a href="#" class="social-login__icon fab fa-twitter"></a>
+				</div>
+			</div>
+		</div>
+		<div class="screen__background">
+			<span class="screen__background__shape screen__background__shape4"></span>
+			<span class="screen__background__shape screen__background__shape3"></span>		
+			<span class="screen__background__shape screen__background__shape2"></span>
+			<span class="screen__background__shape screen__background__shape1"></span>
+		</div>		
+	</div>
+</div>
 
 </body>
-
 </html>
