--- a/Login page/login_page.html
+++ b/Login page/login_page.html
@@ -41,6 +41,7 @@ hard work gains success. Greatness will come....</p>
 				</button>				
 			</form>
 			<div class="social-login">
+
 				<h3><a href="file:///C:/Users/USER/Documents/project/signup_page.html?#"> Sign Up</a></h3>
 				<div class="social-icons">
 					<a href="#" class="social-login__icon fab fa-instagram"></a>
@@ -57,6 +58,24 @@ hard work gains success. Greatness will come....</p>
 		</div>		
 	</div>
 </div>
+
+				<h3><a href="#"> Sign Up</a></h3>
+                            <div class="social-icons">
+                               <a href="#" class="social-login__icon fab fa-instagram"></a>
+					<a href="#" class="social-login__icon fab fa-facebook"></a>
+					<a href="#" class="social-login__icon fab fa-twitter"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="screen__background">
+                        <span class="screen__background__shape screen__background__shape4"></span>
+                        <span class="screen__background__shape screen__background__shape3"></span>
+                        <span class="screen__background__shape screen__background__shape2"></span>
+                        <span class="screen__background__shape screen__background__shape1"></span>
+                    </div>
+            </div>
+        </div>
+
 
 </body>
 </html>
